--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/2. 子账号管理/1. 创建并授权用户组.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/2. 子账号管理/1. 创建并授权用户组.md
@@ -28,6 +28,6 @@ f）勾选需授权的权限，选择完成后，单击“提交”即可。
 
 ##### 说明：若您后续需对用户组的基本信息、组成员以及权限进行编辑，可单击用户组名称，进入用户组详情页面编辑，如下图所示。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/3.%20%E6%8E%A7%E5%88%B6%E5%8F%B0%E4%BD%BF%E7%94%A8%E6%8C%87%E5%BC%95/2.%20%E5%AD%90%E8%B4%A6%E5%8F%B7%E7%AE%A1%E7%90%86/image.png)
+![image](https://user-images.githubusercontent.com/79617492/195288761-d00679f0-dbb5-48ac-8282-09732d3268de.png)
 
 ##### 图1-1 单击用户组名称
