--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/2. 子账号管理/2. 创建子账号用户.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/2. 子账号管理/2. 创建子账号用户.md
@@ -1,1 +1,19 @@
-test
+### 3. 控制台使用指引
+
+#### 3.2 子账号管理
+
+#### 3.2.2 创建子账号用户
+
+用户是一个身份实体，它通常代表您的组织中需要访问飞算云智资源的人员，包含主账号用户和子账号用户，子账号管理中的用户一般指子账号用户。
+
+通过创建子账号用户、为子账号用户设置登录密码，并将子账号用户添加至用户组中，便可以实现通过用户组来管理子账号用户对资源的操作权限。
+
+#### 3.2.2.1 前提条件
+
+您拥有主账号用户登录权限，且该主账号已完成账号实名认证。
+
+#### 3.2.1.2 操作步骤
+
+a）使用主账号登录进入飞算云智控制台，选择“子账号管理”功能进入子账号管理总览页面，或者直接进入[子账号管理总览页面](https://user.feisuanyz.com/accessControl/overview)。
+
+b）在子账号管理总览页面，单击“创建用户”。
