--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/2. 子账号管理/2. 创建子账号用户.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/2. 子账号管理/2. 创建子账号用户.md
@@ -17,3 +17,11 @@
 a）使用主账号登录进入飞算云智控制台，选择“子账号管理”功能进入子账号管理总览页面，或者直接进入[子账号管理总览页面](https://user.feisuanyz.com/accessControl/overview)。
 
 b）在子账号管理总览页面，单击“创建用户”。
+
+c）系统弹出创建用户页面，您需要填写子账号用户的用户名和显示昵称，选择子账号登录密码的设置方式以及是否需要在首次登录后重置密码，填写完成后单击“提交”即创建子账号用户成功。
+
+d）在子账号管理左侧导航栏，单击“人员管理 > 用户”进入[用户管理页面](https://user.feisuanyz.com/accountManage/userManagement)。
+
+e）在用户管理页面，您可以对子账号用户的启用、禁用、账号过期时间等进行设置，选择一条用户记录，即可进入用户详情页面。
+
+f）在用户详情页面，您可以查看用户的基本信息以及当前用户所加入的用户组，并进行移除用户组操作。
