--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/3. AccessKey管理/1. 创建AccessKey.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/3. AccessKey管理/1. 创建AccessKey.md
@@ -1,1 +1,19 @@
-test
+### 3. 控制台使用指引
+
+#### 3.3 AccessKey管理
+
+#### 3.3.1 创建AccessKey
+
+您可以为主账号用户和子账号用户创建一个访问密钥（AccessKey），在前后端在线联调时您需要使用AccessKey调用项目接口，同时在不通过登录方式鉴权时，您可以使用AccessKey完成身份验证。
+
+```
+说明：
+
+AccessKey包括AccessKey ID和AccessKey Secret。
+
+AccessKey ID：用于标识用户。
+
+AccessKey Secret：用于验证用户的密钥，AccessKey Secret必须保密。
+```
+
+#### 3.3.1.1 前提条件
