--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/3. AccessKey管理/1. 创建AccessKey.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/3. AccessKey管理/1. 创建AccessKey.md
@@ -17,3 +17,13 @@ AccessKey Secret：用于验证用户的密钥，AccessKey Secret必须保密。
 ```
 
 #### 3.3.1.1 前提条件
+
+您拥有主账号用户登录权限，且该主账号已完成账号实名认证。
+
+#### 3.3.1.2 操作步骤
+
+a）使用主账号登录进入飞算云智控制台，选择“AccessKey管理”功能进入AccessKey管理页面，或者直接进入[AccessKey管理页面](https://user.feisuanyz.com/accessKey/accessKeyManage)。
+
+b）在AccessKey管理页面，单击“创建AccessKey”即可直接创建。
+
+c）创建成功后，您可以对创建的AccessKey进行管理，选择启用、禁用或删除等操作。
