--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/6. 关注产品迭代更新及接收公告/1. 查看更新具体内容、接收公告.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/6. 关注产品迭代更新及接收公告/1. 查看更新具体内容、接收公告.md
@@ -1,1 +1,15 @@
-test
+### 3. 控制台使用指引
+
+#### 3.6 关注产品迭代更新及接收公告
+
+#### 3.6.1 查看更新具体内容、接收公告
+
+飞算云智产品出现迭代更新时，会及时发布功能更新内容，您可以通过各产品的版本列表查看更新的具体内容，及时接收公告信息有助于您第一时间了解并体验到产品的最新功能。
+
+#### 3.6.1.1 操作步骤
+
+a）进入[飞算云智官网首页](https://www.feisuanyz.com/)，单击页面上方“SoFlu软件机器人”即会显示SoFlu软件机器人包含的所有产品，任意选择一个产品便进入该产品的介绍页。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/3.%20%E6%8E%A7%E5%88%B6%E5%8F%B0%E4%BD%BF%E7%94%A8%E6%8C%87%E5%BC%95/6.%20%E5%85%B3%E6%B3%A8%E4%BA%A7%E5%93%81%E8%BF%AD%E4%BB%A3%E6%9B%B4%E6%96%B0%E5%8F%8A%E6%8E%A5%E6%94%B6%E5%85%AC%E5%91%8A/image.png)
+
+##### 图1-1 飞算云智官网首页
