--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/6. 关注产品迭代更新及接收公告/1. 查看更新具体内容、接收公告.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/6. 关注产品迭代更新及接收公告/1. 查看更新具体内容、接收公告.md
@@ -10,24 +10,24 @@
 
 a）进入[飞算云智官网首页](https://www.feisuanyz.com/)，单击页面上方“SoFlu软件机器人”即会显示SoFlu软件机器人包含的所有产品，任意选择一个产品便进入该产品的介绍页。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/3.%20%E6%8E%A7%E5%88%B6%E5%8F%B0%E4%BD%BF%E7%94%A8%E6%8C%87%E5%BC%95/6.%20%E5%85%B3%E6%B3%A8%E4%BA%A7%E5%93%81%E8%BF%AD%E4%BB%A3%E6%9B%B4%E6%96%B0%E5%8F%8A%E6%8E%A5%E6%94%B6%E5%85%AC%E5%91%8A/image.png)
+![image](https://user-images.githubusercontent.com/79617492/195543110-5317ad08-15ea-44c0-8f10-0c3e37b83954.png)
 
 ##### 图1-1 飞算云智官网首页
 
 b）在产品介绍页，单击右上方“功能更新”即进入该产品的版本列表页面。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/3.%20%E6%8E%A7%E5%88%B6%E5%8F%B0%E4%BD%BF%E7%94%A8%E6%8C%87%E5%BC%95/6.%20%E5%85%B3%E6%B3%A8%E4%BA%A7%E5%93%81%E8%BF%AD%E4%BB%A3%E6%9B%B4%E6%96%B0%E5%8F%8A%E6%8E%A5%E6%94%B6%E5%85%AC%E5%91%8A/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/195543130-6e0eeef6-4934-48dc-975a-7156f71d775e.png)
 
 ##### 图1-2 进入该产品的版本列表页面
 
 c）在版本列表页，任意选中一个功能点即可查看功能点的具体内容。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/3.%20%E6%8E%A7%E5%88%B6%E5%8F%B0%E4%BD%BF%E7%94%A8%E6%8C%87%E5%BC%95/6.%20%E5%85%B3%E6%B3%A8%E4%BA%A7%E5%93%81%E8%BF%AD%E4%BB%A3%E6%9B%B4%E6%96%B0%E5%8F%8A%E6%8E%A5%E6%94%B6%E5%85%AC%E5%91%8A/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/195543147-300fa7e8-bae2-4bd1-8342-d15418bdc589.png)
 
 ##### 图1-3 查看功能点的具体内容
 
 d）您也可以通过登录飞算云智控制台进入[公告列表页面](https://user.feisuanyz.com/notice/list)，查看所有版本更新公告信息以及其他官方公告。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/3.%20%E6%8E%A7%E5%88%B6%E5%8F%B0%E4%BD%BF%E7%94%A8%E6%8C%87%E5%BC%95/6.%20%E5%85%B3%E6%B3%A8%E4%BA%A7%E5%93%81%E8%BF%AD%E4%BB%A3%E6%9B%B4%E6%96%B0%E5%8F%8A%E6%8E%A5%E6%94%B6%E5%85%AC%E5%91%8A/1-4.png)
+![image](https://user-images.githubusercontent.com/79617492/195543166-e300fd30-0d9a-4d42-88c9-c57e593a3b35.png)
 
 ##### 图1-4 查看所有版本更新公告信息
