--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/1. 基础操作/1. 登陆系统.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/1. 基础操作/1. 登陆系统.md
@@ -1,1 +1,21 @@
-test
+### 4. 操作指南
+
+#### 4.1 基础操作
+
+#### 4.1.1 登陆系统
+
+登录飞算SoFlu软件机器人系统(即飞算云智官网) 后才可使用(后端)全自动开发平台。
+
+本节为您介绍如何登录系统并使用(后端)全自动开发平台创建第一个项目。
+
+#### 4.1.1.1 前提条件
+
+已拥有飞算云智账号，并已被赋予使用权，若没有，具体操作请您参考《SoFlu（后端）全自动开发平台教程第3.1节：注册使用SoFlu软件机器人》。
+
+#### 4.1.1.2 操作步骤
+
+a）进入[飞算云智官网首页](https://www.feisuanyz.com/)，单击右上角登录选项。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C/image.png)
+
+##### 图1-1 飞算云智官网首页
