--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/1. 基础操作/1. 登陆系统.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/1. 基础操作/1. 登陆系统.md
@@ -35,3 +35,13 @@ c）登录成功后即可看到右上角控制台入口，单击控制台。
 ##### 说明：若您登陆系统时，系统提示“用户已停用”，则表明该账户已被锁定，请联系管理员对该账号解锁后再登录。
 
 d）进入到飞算SoFlu软件机器人系统控制台页面，选择开发产品 > (后端)全自动开发平台卡片，单击进入平台。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C/1-4.png)
+
+##### 图1-4 进入平台
+
+e）进入(后端)全自动开发平台，您便可以根据新手操作指引，开始创建第一个项目啦！
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C/1-5.png)
+
+##### 图1-5 开始创建第一个项目
