--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/1. 基础操作/2. 修改密码.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/1. 基础操作/2. 修改密码.md
@@ -1,1 +1,21 @@
-test
+### 4. 操作指南
+
+#### 4.1 基础操作
+
+#### 4.1.2 修改密码
+
+当您的登录密码临近有效期或出现信息泄漏时，您需要及时修改登录密码。
+
+修改密码有两种方式，第一种在登录页面，单击忘记密码便可根据界面操作提示修改密码；第二种，进入控制台后在安全设置中修改，本节以第二种方式举例为您介绍如何修改密码。
+
+#### 4.1.2.1 前提条件
+
+已登录飞算SoFlu软件机器人系统(即飞算云智官网)，具体可参见《SoFlu（后端）全自动开发平台教程第4.1.1节：登录系统》。
+
+#### 4.1.2.2 操作步骤
+
+a）进入飞算SoFlu软件机器人系统控制台页面，单击右上角头像，选择安全设置。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C/2-1.png)
+
+##### 图2-1 选择安全设置
