--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/1. 基础操作/2. 修改密码.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/1. 基础操作/2. 修改密码.md
@@ -16,18 +16,18 @@
 
 a）进入飞算SoFlu软件机器人系统控制台页面，单击右上角头像，选择安全设置。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196119449-ed7a0eb1-4e9e-481f-9646-16b600d6ad6d.png)
 
 ##### 图2-1 选择安全设置
 
 b）进入安全设置页面，单击修改选项。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196119479-1fae8a66-6974-43ac-a0d4-6e7a79351da0.png)
 
 ##### 图2-2 单击修改选项
 
 c）进入修改登录密码页面，输入旧登录密码，设置新登录密码，并再次输入新登录密码，单击确认则原登录密码失效，您下次登录时输入新登录密码即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C/2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/196119497-c9f4a72a-f945-412e-9938-0361246206a9.png)
 
 ##### 图2-3 修改登录密码
