--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/4. 置顶项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/4. 置顶项目.md
@@ -10,18 +10,18 @@
 
 a）进入(后端)全自动开发平台项目管理页面，选择需置顶的项目卡片，单击项目设置按钮，选择置顶选项。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/4-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196120853-65a145cd-77e3-4d5c-b07f-69d8d418d367.png)
 
 ##### 图4-1 选择置顶选项
 
 b）您可以看到置顶项目卡片右上角显示“置顶”标识。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/4-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196120883-f34c461d-61c6-4954-86c3-486100b1d0c2.png)
 
 ##### 图4-2 “置顶”标识
 
 ##### 说明：最新置顶的项目会在最前面显示，若置顶项目取消置顶，则该项目会回到原来的位置，取消置顶操作如下图所示。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/4-3.png)
+![image](https://user-images.githubusercontent.com/79617492/196120920-6b02eeb8-e8e7-4998-b86a-2fc67a1bb54a.png)
 
 ##### 图4-3 取消置顶
