--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/5. 项目分组.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/5. 项目分组.md
@@ -10,19 +10,19 @@
 
 a）进入(后端)全自动开发平台项目管理页面，选择页面上方创建分组选项。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/5-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196121221-bfb040f0-8a37-443e-ac94-b495e0da0858.png)
 
 ##### 图5-1 选择页面上方创建分组选项
 
 b）系统显示新增分组页面，填写分组的名称和描述，单击确定即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/5-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196121250-d81e2c2f-1ab7-4a91-9412-ab9af7724885.png)
 
 ##### 图5-2 填写分组相关信息
 
 c）项目分组创建成功后，您可以在页面右上方当前分组选项中查看创建的分组并进行分组切换，系统默认显示默认项目组。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/5-3.png)
+![image](https://user-images.githubusercontent.com/79617492/196121281-e5252a29-626c-49df-8358-8535648c7277.png)
 
 ##### 图5-3 查看创建的分组
 
@@ -34,6 +34,6 @@ c1）用户可以通过点击分组旁的删除或修改按钮，对分组进行
 c2）创建项目、复制项目或导入项目时，都必须选择项目分组，已分组的项目也可通过修改进行重新分组，如下图以创建项目为例。
 ```
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/5-4.png)
+![image](https://user-images.githubusercontent.com/79617492/196121298-908d8926-7717-4f45-b2cf-33cbaed9d803.png)
 
 ##### 图5-4 创建项目必须选择项目分组
