--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/10. 导出项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/10. 导出项目.md
@@ -1,1 +1,21 @@
-test
+### 4. 操作指南
+
+#### 4.2 项目管理
+
+#### 4.2.10 导出项目
+
+本节为您介绍如何将平台上创建的项目导出，导出项目时可以指定拥有项目导入权限的租户，并通过设置授权码进行项目资产的双重保护。
+
+#### 4.2.10.1 前提条件
+
+您需要拥有“项目管理”模块的权限。
+
+权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.2.10.2 操作步骤
+
+a）进入项目管理页面，选择需导出的项目，单击项目设置按钮，选择导出项目选项。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/10-1.png)
+
+##### 图10-1 选择导出项目选项
