--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/10. 导出项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/10. 导出项目.md
@@ -16,13 +16,13 @@
 
 a）进入项目管理页面，选择需导出的项目，单击项目设置按钮，选择导出项目选项。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/10-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196400500-c1135406-0b41-4ca5-ba48-41e158f871da.png)
 
 ##### 图10-1 选择导出项目选项
 
 b）填写允许导入该项目的授权租户ID及授权码，并选择导出的环境，单击确定。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/10-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196400515-41c2f4cb-cfb5-4d61-9274-83c4e0953770.png)
 
 ##### 图10-2 填写导出配置信息
 
@@ -40,6 +40,6 @@ b4）若需取消已授权租户的导入项目权限，可参考文档操作指
 
 c）系统提示“是否确认导出项目”，确认后单击确定即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/10-3.png)
+![image](https://user-images.githubusercontent.com/79617492/196400539-2716cdee-6e51-4387-ab2b-892e13a03b10.png)
 
 ##### 图10-3 确认后单击确定
