--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/12. 项目发版.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/12. 项目发版.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.2 项目管理
+
+#### 4.2.12 项目发版
+
+项目开发完成后，若您想要将项目部署到服务器上，则需要先进行项目发版操作，然后您便可以在发版记录中下载对应的项目部署包后进行项目部署，您也可以通过下载最新项目部署包进行项目部署，此时无需进行项目发版。建议您通过项目发版进行项目部署，完成项目发版操作后便于后续进行项目历史版本对比操作，同时当新项目版本出现问题时，您可以通过发版恢复功能，将项目状态恢复到指定版本。
+
+#### 4.2.12.1 操作步骤
+
+a）在平台项目管理页面，选择需要发版的项目，单击设置按钮，选择发版。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/12-1.png)
+
+##### 图12-1 选择发版
