--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/12. 项目发版.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/12. 项目发版.md
@@ -10,30 +10,30 @@
 
 a）在平台项目管理页面，选择需要发版的项目，单击设置按钮，选择发版。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/12-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196401166-135a270d-a7da-4a86-b528-fd791a6ed2d4.png)
 
 ##### 图12-1 选择发版
 
 b）系统弹出项目发版页面，输入项目版本的标签和描述，单击确定。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/12-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196401189-546fd4ca-ac02-4caf-8ea3-19fa635764dc.png)
 
 ##### 图12-2 输入项目版本的标签和描述
 
 c）系统提示“正在生成项目数据包，请于2分钟后查看最新发版记录！”
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/12-3.png)
+![image](https://user-images.githubusercontent.com/79617492/196401210-f00c10e0-78c8-422c-8fc0-c4a19def8250.png)
 
 ##### 图12-3 系统提示
 
 d）稍等几分钟后，发版成功，再次单击设置按钮，选择发版记录。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/12-4.png)
+![image](https://user-images.githubusercontent.com/79617492/196401234-80f8301e-35d6-4073-815d-a1254776b57d.png)
 
 ##### 图12-4 选择发版记录
 
 e）进入发版记录页面，在该页面您可以查看到当前项目所有发版成功的记录。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/12-5.png)
+![image](https://user-images.githubusercontent.com/79617492/196401256-9ada4251-95b7-42d7-a912-6efd5bac8009.png)
 
 ##### 图12-5 查看到当前项目所有发版成功的记录
