--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/14. 项目发版恢复.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/14. 项目发版恢复.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.2 项目管理
+
+#### 4.2.14 项目发版恢复
+
+通过发版恢复功能，用户可以将项目恢复到指定版本。
+
+##### 注意：发版恢复后，项目所有数据都会恢复到指定版本的历史数据，为了防止当前版本的最新数据丢失，可发布当前版本后再恢复历史版本。
+
+#### 4.2.14.1 操作步骤
+
+a）在项目管理页面，找到需进行发版恢复的项目，单击设置按钮，选择发版记录。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/14-1.png)
+
+##### 图14-1 选择发版记录
