--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/14. 项目发版恢复.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/14. 项目发版恢复.md
@@ -12,18 +12,18 @@
 
 a）在项目管理页面，找到需进行发版恢复的项目，单击设置按钮，选择发版记录。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/14-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196402326-daaa3b97-16cc-416a-97aa-851479785370.png)
 
 ##### 图14-1 选择发版记录
 
 b）进入发版记录页面，单击发版恢复。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/14-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196402347-5e037a84-2ee6-4f50-8b95-3ee47451af21.png)
 
 ##### 图14-2 单击发版恢复
 
 c）选择要恢复的历史版本，单击恢复即可，系统提示“恢复项目成功”。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/14-3.png)
+![image](https://user-images.githubusercontent.com/79617492/196402369-44bfad76-9c12-438f-8b49-70f88df5298e.png)
 
 ##### 图14-3 选择要恢复的历史版本
