--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/15. 添加项目加载项.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/15. 添加项目加载项.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.2 项目管理
+
+#### 4.2.15 添加项目加载项
+
+本节为您介绍如何添加项目加载项，包含平台级或自定义的组件、资源、函数、插件和扩展JAR包。
+
+#### 4.2.15.1 操作步骤
+
+a）在项目管理页面，选择需要添加加载项的项目，单击设置按钮，选择加载项。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/15-1.png)
+
+##### 图15-1 选择加载项
