--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/16. 下载项目配置包.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/16. 下载项目配置包.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.2 项目管理
+
+#### 4.2.16 下载项目配置包
+
+项目发版后，用户可根据实际需要在发版记录中下载所需环境的项目配置包，项目配置包文件包含项目的配置组管理信息以及所有资源实例信息，可在后续部署项目中使用。
+
+#### 4.2.16.1 操作步骤
+
+a）在项目管理页面，单击项目卡片上的设置按钮，选择发版记录。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/16-1.png)
+
+##### 图16-1 选择发版记录
