--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/16. 下载项目配置包.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/16. 下载项目配置包.md
@@ -10,36 +10,36 @@
 
 a）在项目管理页面，单击项目卡片上的设置按钮，选择发版记录。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/16-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196403029-55977fa2-c5db-4ee9-ace1-bbe8ff7094dd.png)
 
 ##### 图16-1 选择发版记录
 
 b）进入项目发版记录页面，找到需下载项目配置包的项目版本，在操作列单击下载配置包图标。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/16-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196403045-1a6369a1-0df3-4be0-aa2b-8844b4e3f075.png)
 
 ##### 图16-2 单击下载配置包图标
 
 c）系统弹出导出配置页面，选择导出的环境，单击确定。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/16-3.png)
+![image](https://user-images.githubusercontent.com/79617492/196403066-46ec72a7-ec65-4ad3-b124-7e83e367c969.png)
 
 ##### 图16-3 选择导出的环境
 
 d）系统提示“是否确定下载项目配置包”，单击确定即开始下载。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/16-4.png)
+![image](https://user-images.githubusercontent.com/79617492/196403099-abe9a80e-f022-4d36-bbdf-05ff6847a7ad.png)
 
 ##### 图16-4 单击确定
 
 e）下载的项目配置包文件如下图所示。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/16-5.png)
+![image](https://user-images.githubusercontent.com/79617492/196403121-1756b398-1cdc-4a5d-a456-492b1b3c586e.png)
 
 ##### 图16-5 项目配置包文件
 
 f）通过替换项目部署包中的配置文件，即可使用下载的项目配置包文件部署项目。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/16-6.png)
+![image](https://user-images.githubusercontent.com/79617492/196403141-a457f98f-16cc-4edb-9b51-b24cd2838608.png)
 
 ##### 图16-6 替换项目部署包中的配置文件
