--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/17. 下载项目最新部署包.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/17. 下载项目最新部署包.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.2 项目管理
+
+#### 4.2.17 下载项目最新部署包
+
+平台支持直接下载项目最新部署包，无需进行项目发版，即可进行项目部署，将下载的项目最新部署包放置于本地执行引擎包的app目录后启动执行引擎即可，项目部署的更多操作详情请参见《SoFlu（后端）全自动开发平台教程第2.9.1节：如何部署项目》。
+
+本节为您介绍如何下载最新项目部署包。
+
+##### 4.2.17.1 操作步骤
+
+a）进入平台项目管理页面，单击项目卡片上的设置按钮，选择“项目部署包”。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/17-1.png)
+
+##### 图17-1 选择“项目部署包”
