--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/18. 获取、查看项目源码包.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/18. 获取、查看项目源码包.md
@@ -1,1 +1,21 @@
-test
+### 4. 操作指南
+
+#### 4.2 项目管理
+
+#### 4.2.18 获取、查看项目源码包
+
+项目源码包即为(后端)全自动开发平台对应项目的Java源码，源码中包含项目所有的接口数据、测试用例数据以及注册中心配置数据等；用户获取到项目源码包之后，便可以使用传统编译工具启动项目，以Java源代码形式查看项目中的接口、测试用例和配置信息等。以下为您介绍如何获取项目源码包，以及获取到源码包后如何查看并使用对应的项目数据。
+
+##### 4.2.18.1 步骤引导
+
+a）获取项目源码包
+
+b）查看项目源码
+
+##### 4.2.18.1.1 获取项目源码包
+
+a）进入(后端)全自动开发平台，选择需要生成源码的项目卡片，单击“设置 > 生成源码”即可获取项目源码包。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/18-1.png)
+
+##### 图18-1 单击“设置 > 生成源码”
