--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/18. 获取、查看项目源码包.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/18. 获取、查看项目源码包.md
@@ -16,7 +16,7 @@ b）查看项目源码
 
 a）进入(后端)全自动开发平台，选择需要生成源码的项目卡片，单击“设置 > 生成源码”即可获取项目源码包。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/18-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196634770-24b32a91-ee10-4c29-9e42-641ac7206812.png)
 
 ##### 图18-1 单击“设置 > 生成源码”
 
@@ -30,7 +30,7 @@ b1）若您勾选“携带依赖jar包”选项，则下载的源码包中将包
 b2）若您需要获取项目历史源码包，进入发版记录页面即可下载项目每一个发布版本的项目源码包，如下图所示。
 ```
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/18-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196634796-190a0580-3f7f-4812-a3ba-577a2e940827.png)
 
 ##### 图18-2 获取项目历史源码包
 
@@ -40,30 +40,30 @@ b2）若您需要获取项目历史源码包，进入发版记录页面即可下
 
 a）在main/Java路径下查看项目接口数据：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/18-3.png)
+![image](https://user-images.githubusercontent.com/79617492/196634834-ab8c34a7-517c-49f2-8cee-c2db389a1fb8.png)
 
 ##### 图18-3 查看项目接口数据
 
 b）在test路径下查看接口测试用例：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/18-4.png)
+![image](https://user-images.githubusercontent.com/79617492/196634868-8f590825-1f3b-4404-b136-f6e043352cfa.png)
 
 ##### 图18-4 查看接口测试用例
 
 c）在resources路径下查看配置信息：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/18-5.png)
+![image](https://user-images.githubusercontent.com/79617492/196634901-26925566-1e32-4da2-ae1a-13d42b3d69aa.png)
 
 ##### 图18-5 查看配置信息
 
 ##### 说明：若项目在(后端)全自动开发平台创建了注册中心资源且接口通过feignclient组件调用，则在使用传统编译工具时，仍然可以在启动项目后将项目自动注册到对应的注册中心服务中，在application.yml配置文件中打开对应注册中心的开关即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/18-6.png)
+![image](https://user-images.githubusercontent.com/79617492/196634948-1171d4e5-2381-4dda-bb8a-8efb04d3a4eb.png)
 
 ##### 图18-6 打开对应注册中心的开关
 
 d）下图为启动项目后，使用全自动测试平台调用接口的效果：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/18-7.png)
+![image](https://user-images.githubusercontent.com/79617492/196634986-56945ca8-d74a-4438-9195-364d39360852.png)
 
 ##### 图18-7 使用全自动测试平台调用接口的效果
