--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/19. 查询项目操作日志报表.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/19. 查询项目操作日志报表.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.2 项目管理
+
+#### 4.2.19 查询项目操作日志报表
+
+项目操作日志报表记录着项目所有创建和更新的数量，用户可以以年、月、周、日为查询维度，查询指定项目的创建数量和更新数量，同时还可以看到具体的操作人员以及人员操作占比等。
+
+##### 4.2.19.1 操作步骤
+
+a）在项目管理页面，单击页面右上方日志报表选项。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/19-1.png)
+
+##### 图19-1 单击页面右上方日志报表选项
