--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/19. 查询项目操作日志报表.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/19. 查询项目操作日志报表.md
@@ -10,13 +10,13 @@
 
 a）在项目管理页面，单击页面右上方日志报表选项。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/19-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196642732-e9e138d2-e950-4022-b461-03cd51d61d34.png)
 
 ##### 图19-1 单击页面右上方日志报表选项
 
 b）进入查询日志报表页面，选择查询项目、查询维度，单击查询即可查看指定项目的操作日志报表。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/19-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196642754-bd23c97b-f7f3-4745-9639-08352993ad77.png)
 
 ##### 图19-2 查看指定项目的操作日志报表
 
