--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/20. 多分支开发项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/20. 多分支开发项目.md
@@ -1,1 +1,23 @@
-test
+### 4. 操作指南
+
+#### 4.2 项目管理
+
+#### 4.2.20 多分支开发项目
+
+分支是从主线上分离出来可以进行其它操作的新分支，同时又不影响主线上的功能；用户可以创建多个分支，同时在不同分支上开发不同的功能，最后通过合并分支方式将其它分支上开发的功能合并到主线上。
+
+以下为您介绍多分支开发项目的基本操作内容，包含创建分支、修改分支名称、检出分支、合并分支、查看分支合并记录以及删除分支。
+
+##### 4.2.20.1 步骤引导
+
+a）创建分支
+
+b）修改分支名称
+
+c）检出分支
+
+d）合并分支
+
+e）查看分支合并记录
+
+f）删除分支
