--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/20. 多分支开发项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/20. 多分支开发项目.md
@@ -21,3 +21,25 @@ d）合并分支
 e）查看分支合并记录
 
 f）删除分支
+
+##### 4.2.20.1.1 创建分支
+
+a）进入(后端)全自动开发平台项目管理页面，选择项目卡片，单击卡片上“当前分支”选项。
+
+b）鼠标悬停在当前分支上，单击“创建分支”。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/20-1.png)
+
+##### 图20-1 单击“创建分支”
+
+##### 说明：只有在当前分支时才能创建分支。
+
+c）系统弹出新增分支页面，填写分支名称后，单击“确定”即可。
+
+##### 说明：建议填写不包含中文的分支名称，因为后续在平台上使用http组件调用其他分支的接口时需添加“key为branch-name，value为项目分支名称”的请求头参数，由于http协议请求头参数不允许出现中文，若出现中文，则需要先使用单函数组件调用函数 encode(String arg0,String arg1) 将中文字符转换为UTF-8字符后才可以正常调用。
+
+d）系统提示“操作成功”后会将项目自动切换到最新创建的分支，并自动重启项目。
+
+##### 说明：本地客户端创建的分支不会自动重启，需要您手动重启。
+
+e）项目状态显示“正常运行”后，您便可以在项目分支中进行项目开发。
