--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/20. 多分支开发项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/2. 项目管理/20. 多分支开发项目.md
@@ -91,3 +91,25 @@ f2）勾选子模块信息时，需要同时勾选父模块，否则同步后无
 
 f3）若需要取消部分已提交的内容时，直接取消已勾选的内容，然后再单击“同步提交明细”，提交新的合并内容即可。
 ```
+
+##### 4.2.20.1.5 查看分支合并记录
+
+a）单击项目卡片上“当前分支”选项，选择“分支合并记录”。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/20-5.png)
+
+##### 图20-5 选择“分支合并记录”
+
+b）系统弹出分支合并记录页面，单击“查看详情”即可查看到对应分支合并的详细信息。
+
+##### 4.2.20.1.6 删除分支
+
+##### 说明：只有分支创建人可以删除自己创建的分支，无法删除其它分支；master分支不允许删除。
+
+a）选中需要删除的分支，单击“删除分支”。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/20-6.png)
+
+##### 图20-6 单击“删除分支”
+
+b）系统提示“是否确认删除分支”，确认后单击“确定”即可。
