--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/1. 数据中心/1. 新增数据中心.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/1. 数据中心/1. 新增数据中心.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.3 配置中心
+
+#### 4.3.1 数据中心
+
+#### 4.3.1.1 新增数据中心
+
+本节为您介绍如何新增数据中心。
+
+##### 说明：数据中心用于分组管理(后端)全自动开发平台项目的开发环境，一个数据中心下可以拥有多个环境，每个环境也可以分配给不同的数据中心。
+
+#### 4.3.1.1.1 前提条件
+
+a）您需要拥有“配置中心”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
