--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/1. 数据中心/4. 恢复数据中心.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/1. 数据中心/4. 恢复数据中心.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.3 配置中心
+
+#### 4.3.1 数据中心
+
+#### 4.3.1.4 恢复数据中心
+
+本节为您介绍如何恢复已删除的数据中心。
+
+#### 4.3.1.4.1 前提条件
+
+a）您需要拥有“配置中心”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.3.1.4.2 操作步骤
+
+a）进入数据中心管理页面，在右侧数据中心区域上方选择已删除页签。
