--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/2. 环境管理/1. 新增环境.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/2. 环境管理/1. 新增环境.md
@@ -22,12 +22,12 @@ b）进入配置中心管理页面，选择数据中心页签。
 
 c）单击左侧环境管理区域右上角的 + 按钮。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E9%85%8D%E7%BD%AE%E4%B8%AD%E5%BF%83/2.%20%E7%8E%AF%E5%A2%83%E7%AE%A1%E7%90%86/image.png)
+![image](https://user-images.githubusercontent.com/79617492/196659677-e1771b0b-5e2b-40ff-a186-80bd4cf908fc.png)
 
 ##### 图1-1 单击 + 按钮
 
 d）输入新增环境的名称和描述，单击确定即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E9%85%8D%E7%BD%AE%E4%B8%AD%E5%BF%83/2.%20%E7%8E%AF%E5%A2%83%E7%AE%A1%E7%90%86/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196659703-5efa01bc-af56-455a-8289-21bbea4b8b4d.png)
 
 ##### 图1-2 输入新增环境的名称和描述
