--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/2. 环境管理/2. 修改环境.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/2. 环境管理/2. 修改环境.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.3 配置中心
+
+#### 4.3.2 环境管理
+
+#### 4.3.2.2 修改环境
+
+本节为您介绍如何修改环境信息。
+
+#### 4.3.2.2.1 前提条件
+
+a）您需要拥有“配置中心”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.3.2.2.2 操作步骤
+
+a）进入数据中心管理页面，单击需修改环境后的修改按钮。
