--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/2. 环境管理/2. 修改环境.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/2. 环境管理/2. 修改环境.md
@@ -18,12 +18,12 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入数据中心管理页面，单击需修改环境后的修改按钮。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E9%85%8D%E7%BD%AE%E4%B8%AD%E5%BF%83/2.%20%E7%8E%AF%E5%A2%83%E7%AE%A1%E7%90%86/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196659895-7f869b44-8403-472c-a131-d413244aa8e5.png)
 
 ##### 图2-1 单击修改按钮
 
 b）系统弹出修改环境窗口，输入修改后的环境名称和描述，单击确定即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E9%85%8D%E7%BD%AE%E4%B8%AD%E5%BF%83/2.%20%E7%8E%AF%E5%A2%83%E7%AE%A1%E7%90%86/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196659929-5c546365-df56-4dc4-8534-13b0dbcf8f58.png)
 
 ##### 图2-2 输入修改后的环境名称和描述
