--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/2. 环境管理/3. 删除环境.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/2. 环境管理/3. 删除环境.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.3 配置中心
+
+#### 4.3.2 环境管理
+
+#### 4.3.2.3 删除环境
+
+本节为您介绍如何删除不需要的环境。
+
+#### 4.3.2.3.1 前提条件
+
+a）您需要拥有“配置中心”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.3.2.3.2 操作步骤
