--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/2. 环境管理/4. 恢复环境.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/2. 环境管理/4. 恢复环境.md
@@ -17,3 +17,15 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 #### 4.3.2.4.2 操作步骤
 
 a）进入数据中心管理页面，在左侧环境管理区域上方选择已删除页签。
+
+b）环境列表显示所有已删除的环境，单击需恢复环境后的恢复按钮。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E9%85%8D%E7%BD%AE%E4%B8%AD%E5%BF%83/2.%20%E7%8E%AF%E5%A2%83%E7%AE%A1%E7%90%86/4-1.png)
+
+##### 图4-1 单击恢复按钮
+
+c）系统提示“是否确认恢复该数据中心”，单击确定即可。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E9%85%8D%E7%BD%AE%E4%B8%AD%E5%BF%83/2.%20%E7%8E%AF%E5%A2%83%E7%AE%A1%E7%90%86/4-2.png)
+
+##### 图4-2 单击确定
