--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/3. 资源中心/1. 查看资源.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/3. 资源中心/1. 查看资源.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.3 配置中心
+
+#### 4.3.3 资源中心
+
+#### 4.3.3.1 查看资源
+
+资源中心整合了平台级和租户级的所有资源，平台级资源即为官方平台提供的资源，租户级资源即为用户自己导入的资源。
+
+本节为您介绍如何查看资源中心中所有资源的详细信息。
+
+#### 4.3.3.1.1 前提条件
+
+a）您需要拥有“配置中心”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.3.3.1.2 操作步骤
