--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/3. 资源中心/1. 查看资源.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/3. 资源中心/1. 查看资源.md
@@ -17,3 +17,11 @@ a）您需要拥有“配置中心”模块的权限。
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
 #### 4.3.3.1.2 操作步骤
+
+a）进入(后端)全自动开发平台，选择上方菜单区配置中心 > 资源中心。
+
+b）进入资源中心管理页面，您可以切换页签查看租户级或平台级资源下所有资源的详细信息。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E9%85%8D%E7%BD%AE%E4%B8%AD%E5%BF%83/3.%20%E8%B5%84%E6%BA%90%E4%B8%AD%E5%BF%83/image.png)
+
+##### 图1-1 资源中心管理页面
