--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/3. 资源中心/2. 导入自定义资源.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/3. 资源中心/2. 导入自定义资源.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.3 配置中心
+
+#### 4.3.3 资源中心
+
+#### 4.3.3.2 导入自定义资源
+
+本节为您介绍如何导入自定义资源。
+
+##### 说明: (后端)全自动开发平台支持用户导入自定义资源，但需要按照平台提供的Demo工程包进行资源实例的自定义，具体请参见《SoFlu（后端）全自动开发平台教程第8.5节：自定义资源实例》。
+
+#### 4.3.3.2.1 前提条件
+
+a）您需要拥有“配置中心”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.3.3.1.2 操作步骤
