--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/3. 资源中心/2. 导入自定义资源.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/3. 资源中心/2. 导入自定义资源.md
@@ -20,12 +20,12 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入资源中心管理页面，选择租户级页签，进入租户级资源列表，单击导入选项。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E9%85%8D%E7%BD%AE%E4%B8%AD%E5%BF%83/3.%20%E8%B5%84%E6%BA%90%E4%B8%AD%E5%BF%83/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196904448-9a05b3d3-c9aa-492a-b18a-ea769e4318f2.png)
 
 ##### 图2-1 单击导入选项
 
 b）系统弹出导入资源类型页面，上传自定义资源实例的zip文件后，单击确定即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E9%85%8D%E7%BD%AE%E4%B8%AD%E5%BF%83/3.%20%E8%B5%84%E6%BA%90%E4%B8%AD%E5%BF%83/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196904474-a8fb72e5-73e9-46f4-ba4e-aa5b51a54e0d.png)
 
 ##### 图2-2 上传自定义资源实例的zip文件
